feat(review) : minio 테스트코드 작성 및 커스텀 예외처리 추가 Fixes#89